syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.funtime.grpc.system.demo.grpc";
option java_outer_classname = "DemoServiceProto";
option objc_class_prefix = "funtime";

package DemoService;

// demo服务
service DemoService {
    // 获取全部
    rpc GetAll (GetAllRequest) returns (GetAllReply) {
    }
}

// 获取全部请求
message GetAllRequest {
}

// 获取全部响应
message GetAllReply {
    repeated DemoInfo demo = 1;
}

message DemoInfo {
    int64 id = 1;
    string title = 2;
    string subTitle = 3;
    string image = 4;
    string linkUrl = 5;
}

